fixed paragraph spacing

--- a/src/recipe.module.css
+++ b/src/recipe.module.css
@@ -1,3 +1,9 @@
+p{
+    margin: 0;
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
+
 .recipe{
     border-radius: 10px;
     box-shadow: 0px 5px 20px grey;
